fix: add overflow-y scroll on html and body elements

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow-y: scroll;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   html,
   body {
